using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "IsMoving";

    internal static string isRunning = "IsRunning";

    internal static string isGrounded = "IsGrounded";

    internal static string isOnWall = "IsOnWall";
    
    internal static string isOnCeilling = "IsOnCeilling";
    internal static string jumpTrigger = "IsJumping";
    internal static string attackTrigger = "IsAttack";
    internal static string yVelocity = "yVelocity";

    internal static string canMove = "CanMove";
    
    
}
